# vyp

./: .gitignore  Cargo.toml  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: build-binaries.yml  ci.yml  release.yml
benchmarks/install-20-packages/: pylock.toml  pyproject.toml  run_benchmark.sh
crates/vyp/: Cargo.toml
crates/vyp-api/: Cargo.toml
crates/vyp-api/src/: lib.rs  plugin_abi.rs
crates/vyp-api/src/traits/: conflict_strategy.rs  index_scope.rs  metadata_provider.rs  mod.rs  resolution_filter.rs
crates/vyp-api/src/types/: conflict.rs  marker.rs  mod.rs  override_layer.rs  package.rs  provenance.rs  requirement.rs  substitution.rs  variant.rs  version.rs
crates/vyp-core/: Cargo.toml
crates/vyp-core/src/: index_router.rs  lib.rs
crates/vyp-core/src/plugin/: loader.rs  mod.rs  registry.rs
crates/vyp-core/src/resolver/: explain.rs  mod.rs  provenance.rs
crates/vyp-core/src/strategies/: mod.rs  override_strategy.rs  pre_release.rs  substitution.rs  transitive_fork.rs
crates/vyp-core/tests/: integration.rs  solver_property.rs  unsat_regression.rs
crates/vyp-index/: Cargo.toml
crates/vyp-index/src/: auth.rs  cache.rs  client.rs  in_memory_index.rs  lib.rs  metadata.rs  pypi.rs  variants.rs  version_filter.rs  wheel_compat.rs  wheel_metadata.rs
crates/vyp-resolver/: Cargo.toml
crates/vyp-resolver/src/: lib.rs  provider.rs  solver.rs
crates/vyp/src/: accelerator.rs  main.rs
crates/vyp/src/cache/: installed.rs  linker.rs  mod.rs  venv.rs  wheel_cache.rs
crates/vyp/src/cli/: add.rs  cache_cmd.rs  common.rs  conflict.rs  diff.rs  explain.rs  install.rs  lock.rs  mod.rs  override_cmd.rs  plugin_cmd.rs  resolve.rs  sync.rs  uninstall.rs
crates/vyp/src/config/: settings.rs
crates/vyp/src/lock/: conflict_overrides.rs  diff.rs  lockfile.rs  mod.rs  universal.rs
docs/: index.md
docs/concepts/: caching.md  provenance.md  resolution.md  substitutions.md  transitive-conflicts.md  wheel-variants.md
docs/configuration/: environment.md  pyproject.md
docs/development/: architecture.md  contributing.md  future-improvements.md  plan-install-performance.md  plan-universal-resolution-fork-strategy.md
docs/getting-started/: first-steps.md  installation.md
docs/guides/: dependencies.md  indexes.md  lockfiles.md  overrides.md  plugins.md  projects.md  pytorch.md  troubleshooting.md
docs/reference/: api.md  cli.md  conflict-overrides-format.md  lockfile-format.md
examples/sample-plugin/: Cargo.toml
examples/sample-plugin/src/: lib.rs
python/vyp/: __init__.py  __main__.py
