[workspace]
members = ["crates/vyp-api", "crates/vyp-core", "crates/vyp", "crates/vyp-resolver", "crates/vyp-index"]
exclude = ["examples/sample-plugin"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vyp-lang/vyp"
homepage = "https://vyp.dev"
documentation = "https://vyp.dev"

[workspace.dependencies]
vyp-api = { path = "crates/vyp-api" }
vyp-core = { path = "crates/vyp-core" }
vyp-resolver = { path = "crates/vyp-resolver" }
vyp-index = { path = "crates/vyp-index" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
toml = "0.8"
toml_edit = "0.22"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls", "http2", "charset", "macos-system-configuration", "gzip", "brotli", "stream"] }
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
libloading = "0.8"
zip = "2"
flate2 = "1"
ciborium = "0.2"
sha2 = "0.10"
futures = "0.3"
tokio-stream = "0.1"
libc = "0.2"
walkdir = "2"
dashmap = "6"
indexmap = "2"
version-ranges = "0.1"
