[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vyp"
version = "0.1.0"
description = "Transitive-conflict-aware Python dependency resolver"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]

[project.urls]
Homepage = "https://vyp.dev"
Repository = "https://github.com/vyp-lang/vyp"
Documentation = "https://vyp.dev"

# Note: no `[project.scripts]` — with `bindings = "bin"` maturin installs the
# Rust binary directly as the `vyp` command. Defining a console-script entry
# point as well makes maturin fail ("scripts and a binary don't mix").

[tool.maturin]
bindings = "bin"
manifest-path = "crates/vyp/Cargo.toml"
python-source = "python"
strip = true
