[project]
name = "bench-20"
version = "0.1.0"
description = "Benchmark: 20 direct dependencies"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2.3",
    "pandas>=2.0,<2.2",
    "requests",
    "flask",
    "click",
    "rich",
    "httpx",
    "pydantic",
    "pyyaml",
    "jinja2",
    "certifi",
    "tomli",
    "black",
    "pytest",
    "mypy",
    "aiohttp",
    "sqlalchemy",
    "redis",
    "celery",
    "fastapi",
]
