[package]
name = "vyp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core resolver engine for the vyp dependency resolver"

[dependencies]
vyp-api = { workspace = true }
vyp-resolver = { workspace = true }
vyp-index = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libloading = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
version-ranges = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
vyp-index = { workspace = true }
