[package]
name = "vyp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transitive-conflict-aware Python dependency resolver"

[[bin]]
name = "vyp"
path = "src/main.rs"

[dependencies]
vyp-api = { workspace = true }
vyp-core = { workspace = true }
vyp-index = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
zip = { workspace = true }
sha2 = { workspace = true }
libc = { workspace = true }
walkdir = { workspace = true }
rayon = "1"
reflink-copy = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
filetime = "0.2"
